[metadata]
name = hill-cipher
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python library for the classical Hill Cipher encryption algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/yourusername/hill-cipher
keywords = hill cipher, cryptography, encryption, python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Security :: Cryptography
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.20

[options.extras_require]
dev =
    pytest
    black

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    hillcipher-example = examples.example_usage:main
